--- a/Practice API/index.html
+++ b/Practice API/index.html
@@ -103,6 +103,7 @@
           <p>Stanley, West Virginia</p>
         </div> -->
     </div>
+    <div id="pagination" class="pagination"></div>
 
     <script src="main.js"></script>
   </body>
